tests/fails/expr_index.mat
scalar A
matrix B[1,2]

B = { 1 1 }
A = (B*tr(B))[1,1]